<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dengueapplication.Registro" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp" >

                <TextView
                    android:id="@+id/textNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/apellido" />

                <EditText
                    android:id="@+id/editTextApellido"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textRegistroMedico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/RegistroMedico" />

                <EditText
                    android:id="@+id/editTextRegistroMedico"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textConstrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/textoContrasena" />

                <EditText
                    android:id="@+id/editTextContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textAnoGraduacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/AnoGraduacion" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <NumberPicker
                        android:id="@+id/ano"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <CheckBox
                        android:id="@+id/checkBoxEspecialista"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:text="@string/especialista"
                        android:textSize="14sp" />

                    <CheckBox
                        android:id="@+id/checkBoxGeneral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:text="@string/general"
                        android:textSize="14sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/textoEspecialista"
                    android:textColor="#848484"
                    android:textSize="14sp" />

            </TableRow>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textCapacitacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/texto_capacitacion" />

                <CheckBox
                    android:id="@+id/checkBoxSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textCapacitacion"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/textoSi" />

                <CheckBox
                    android:id="@+id/checkBoxNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/textCapacitacion"
                    android:layout_marginRight="50dp"
                    android:text="@string/textoNo" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/botonRegistrar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentTop="false"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="38dp"
                    android:text="@string/IngresarRegistro"
                    android:textColor="#FFFFFF" />

            </RelativeLayout>

        </TableLayout>

    </ScrollView>

</LinearLayout>
