<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginBottom="28dp"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dengueapplication.LoginUser" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imagenLogin"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/descripcionLogo"
            android:src="@drawable/logo_alternativo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="50dp"
                        android:text="@string/usuario" />

                    <EditText
                        android:id="@+id/editUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text" >

                    <requestFocus />
                </EditText>

                </LinearLayout>
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                    <LinearLayout
                    	android:layout_width="wrap_content"
                   	 	android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/txtContrasena"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="34dp"
                        android:text="@string/txtContrasena" />

                    <EditText
                        android:id="@+id/editContrasena"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textPassword" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/botonIngreso"
                        style="@style/AppTheme"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/ingresar" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textRegistro"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="50dp"
                        android:layout_weight="0.08"
                        android:text="@string/txtRegistro" />

                    <CheckedTextView
                        android:id="@+id/nuevo_registro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="0.08"
                        android:clickable="true"
                        android:gravity="center"
                        android:onClick="@string/registro"
                        android:text="@string/registro"
                        android:textColor="#2E64FE" />

                </LinearLayout>

            </TableRow>
        </TableLayout>

    </LinearLayout>


</LinearLayout>
